@@ -28,6 +28,7 @@
 	- selinux: set "rpm_script_t" always, not just for /bin/sh.
 	- honor inherited SIG_IGN when establishing rpmdb signal exit (#134474).
 	- python: remove ".A" from creaky ts.check() tuple return (#135008).
+	- fix: don't set handler if SIG_IGN is already set (#134474).
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
